--- a/index.html
+++ b/index.html
@@ -21,19 +21,16 @@
           </div>
         </div>
         <p id="site-description">
-          The Community Robotics, Education and Technology Empowerment Lab
-          (<a href="http://www.cmucreatelab.org/">CREATE Lab</a>)<br>
-          explores socially meaningful innovation and deployment of robotic technologies. We aim to<br>
-          empower a technologically fluent generation of people and empower everyday citizens and scientists.
+          The Community Robotics, Education and Technology Empowerment Lab (<a href="http://www.cmucreatelab.org/">CREATE Lab</a>) explores socially meaningful innovation and deployment of robotic technologies. We aim to empower a technologically fluent generation of people and empower everyday citizens and scientists.
         </p>
       </div>
-      <div id="body">
+      <div id="body-index">
         <table>
           <tr>
             <td class="thumbnail">
               <a href="explorables/speck-air-quality-test.html">
                 <div>
-                  <img class="thumbnail-image" src="img/speck12x12@2x.png" width="225">
+                  <img class="thumbnail-image" src="img/speck12x12@2x.png">
                   <div class="thumbnail-title">Speck Air Quality Test</div>
                   <div class="thumbnail-description">Visualization of a Speck test showing how indoor air quality is effected by vacuuming, running an air purifier and blowing out candles.
                   </div>
@@ -43,7 +40,7 @@
             <td class="thumbnail">
               <a href="explorables/firms-timelapse.html">
                 <div>
-                  <img class="thumbnail-image" src="img/firms-lance-modis@2x.png" width="225">
+                  <img class="thumbnail-image" src="img/firms-lance-modis@2x.png">
                   <div class="thumbnail-title">FIRMS Timelapse</div>
                   <div class="thumbnail-description">Visualization of thirteen years of MODIS fire location vector data overlayed on explorable global timelapse.</div>
                 </div>
@@ -52,7 +49,7 @@
             <td class="thumbnail">
               <a href="explorables/suburban-sprawl.html">
                 <div>
-                  <img class="thumbnail-image" src="img/suburban-sprawl@2x.png" width="225">
+                  <img class="thumbnail-image" src="img/suburban-sprawl@2x.png">
                   <div class="thumbnail-title">Suburban Sprawl</div>
                   <div class="thumbnail-description">Video exploring the growth of suburban sprawl in Chesterfield County, Virginia using Timemachine to show the full scope of changes.</div>
                 </div>
@@ -61,7 +58,7 @@
             <td class="thumbnail">
               <a href="explorables/template.html">
                 <div>
-                  <img class="thumbnail-image" src="img/airnow@2x.png" width="225">
+                  <img class="thumbnail-image" src="img/airnow@2x.png">
                   <div class="thumbnail-title">AirNow</div>
                   <div class="thumbnail-description">Explorable visualization of AirNow data showing changes in particle values and air quality across the United States.</div>
                 </div>
@@ -72,9 +69,9 @@
             <td class="thumbnail">
               <a href="explorables/template.html">
                 <div>
-                  <img class="thumbnail-image" src="img/drilling@2x.png" width="225">
+                  <img class="thumbnail-image" src="img/drilling@2x.png">
                   <div class="thumbnail-title">Drilling</div>
-                  <div class="thumbnail-description">Time series visualization of over 1 million natural resource extraction wells ineight states spanning decades.
+                  <div class="thumbnail-description">Time series visualization of over one million natural resource extraction wells in eight states spanning decades.
                  </div>
                 </div>
               </a>
@@ -82,7 +79,7 @@
             <td class="thumbnail">
               <a href="explorables/fracking-earthquakes.html">
                 <div>
-                  <img class="thumbnail-image" src="img/earthquakes@2x.png" width="225">
+                  <img class="thumbnail-image" src="img/earthquakes@2x.png">
                   <div class="thumbnail-title">Fracking Earthquakes</div>
                   <div class="thumbnail-description">Visualization of LANDSAT timemachine exploring the possible connection in Arkansas between earthquakes and natural gas drilling.</div>
                 </div>
@@ -91,16 +88,16 @@
             <td class="thumbnail">
               <a href="explorables/eva-and-lehd.html">
                 <div>
-                  <img class="thumbnail-image" src="img/lehd@2x.png" width="225">
+                  <img class="thumbnail-image" src="img/lehd@2x.png">
                   <div class="thumbnail-title">EVA & LEHD</div>
-                  <div class="thumbnail-description">Multi-dimensional visualization of LEHD (Longitudinal Employer-Household Dynamics) data using the EVA (Explorable Visual Analytics) tool.</div>
+                  <div class="thumbnail-description">Multi-dimensional visualization of LEHD (Longitudinal Employer-Household Dynamics) data using EVA (Explorable Visual Analytics).</div>
                 </div>
               </a>
             </td>
             <td class="thumbnail">
               <a href="explorables/timelapse-story-telling.html">
                 <div>
-                  <img class="thumbnail-image" src="img/yenchia@2x.png" width="225">
+                  <img class="thumbnail-image" src="img/yenchia@2x.png">
                   <div class="thumbnail-title">Timelapse Story Telling</div>
                   <div class="thumbnail-description">Visualization exploring landscape changes along Taiwan's coastline over two decades using Timemachine.</div>
                 </div>
