Add direct links to AirNow and Drilling visualizations

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </a>
             </td>
             <td class="thumbnail">
-              <a href="explorables/template.html">
+              <a href="http://specksensor.org/visualization/airnow_visualization_canvas.html" target="_blank">
                 <div>
                   <img class="thumbnail-image" src="img/airnow@2x.png">
                   <div class="thumbnail-title">AirNow</div>
@@ -67,7 +67,7 @@
           </tr>
           <tr>
             <td class="thumbnail">
-              <a href="explorables/template.html">
+              <a href="http://gabrielo.cmucreatelab.org/drilling-data-tools/visualize/google-maps.html" target="_blank">
                 <div>
                   <img class="thumbnail-image" src="img/drilling@2x.png">
                   <div class="thumbnail-title">Drilling</div>
