Fixed typo (Timemachine --> Time Machine)

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <div>
                   <img class="thumbnail-image" src="img/yenchia@2x.png">
                   <div class="thumbnail-title">Timelapse Story Telling</div>
-                  <div class="thumbnail-description">Visualization exploring landscape changes along Taiwan's coastline over two decades using Timemachine.</div>
+                  <div class="thumbnail-description">Visualization exploring landscape changes along Taiwan's coastline over two decades using Time Machine.</div>
                 </div>
               </a>
             </td>
