The "try it yourself" link for the Speck 12x12 visualization now points to a file which iframes content from bartley.cmucreatelab.org.  Also tweaked content of the speck12x12 page.

--- a/explorables/speck-air-quality-test.html
+++ b/explorables/speck-air-quality-test.html
@@ -23,19 +23,23 @@
       </div>
       <div id="body">
         <div id="embed">
-          <iframe src="//player.vimeo.com/video/85833543" width="520" height="330" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/85833543">Speck 12x12 Test</a> from <a href="http://vimeo.com/user4107587">CREATE Lab</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+          <iframe src="//player.vimeo.com/video/85833543" width="520" height="330" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
         </div>
         <div id="embed-description">
             <h3>Speck Air Quality Test</h3>
             <p class="content-text">
+              Speck is a low-cost particulate monitor currently under development by the CMU CREATE Lab as a tool for
+              citizen science and personal exposure tracking. Through community-generated advocacy maps and data
+              visualization, this device will enable communities and individuals to better understand and quantify the
+              quality of the air they breathe.
+            </p>
+            <p class="content-text">
               We arranged 144 Specks in a 12 x 12 grid
-              to test how particles flow through the room. The Specks
-              recorded samples once per second. The colored cells on the grid represent the values recorded. We also took periodic
-              readings in the corners of the grid with a Hach MET ONE HHPC-6 particle counter--those readings are
-              represented in the four corner cells labeled C1, C2, C3, and C4.
+              to test how particles flow through the room. We tested with a vacuum cleaner, an air purifier, and candles.
+              This video presents the test results and gives instructions on how to use the explorable.
             </p>
           <ul>
-            <li><a href="http://specksensor.org/visualization/speck_12x12.html" target="_blank">Explore it yourself</a></li>
+            <li><a href="speck-air-quality-test-explorable.html" target="_blank">Open the visualization to explore for yourself</a></li>
           </ul>
         </div>
       </div>
