AirNow visualization now points to a proper page.  That page provides a link to an embedded version of the AirNow viz.

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <div>
                   <img class="thumbnail-image" src="img/speck12x12@2x.png">
                   <div class="thumbnail-title">Speck Air Quality Test</div>
-                  <div class="thumbnail-description">Visualization of a Speck test showing how indoor air quality is effected by vacuuming, running an air purifier and blowing out candles.
+                  <div class="thumbnail-description">Visualization of a Speck test showing how indoor air quality is effected by vacuuming, running an air purifier, and blowing out candles.
                   </div>
                 </div>
               </a>
@@ -56,11 +56,11 @@
               </a>
             </td>
             <td class="thumbnail">
-              <a href="http://specksensor.org/visualization/airnow_visualization_canvas.html" target="_blank">
+              <a href="explorables/airnow.html" target="_blank">
                 <div>
                   <img class="thumbnail-image" src="img/airnow@2x.png">
                   <div class="thumbnail-title">AirNow</div>
-                  <div class="thumbnail-description">Explorable visualization of AirNow data showing changes in particle values and air quality across the United States.</div>
+                  <div class="thumbnail-description">Explorable visualization of AirNow PM 2.5 data showing changes in particle values and air quality across the United States.</div>
                 </div>
               </a>
             </td>
