Added Speck in-home test

--- a/index.html
+++ b/index.html
@@ -104,6 +104,19 @@
               </a>
             </td>
           </tr>
+          <td class="thumbnail">
+            <a href="explorables/speck-in-home.html">
+              <div>
+                <img class="thumbnail-image" src="img/speck_in_home@2x.png">
+                <div class="thumbnail-title">Speck In-Home Test</div>
+                <div class="thumbnail-description">Visualization of 64 Specks located in homes around the Pittsburgh area.
+                </div>
+              </div>
+            </a>
+          </td>
+          <td></td>
+          <td></td>
+          <td></td>
         </table>
       </div>
       <div id="footer">
