--- a/explorables/speck-air-quality-test.html
+++ b/explorables/speck-air-quality-test.html
@@ -36,7 +36,7 @@
             <p class="content-text">
               We arranged 144 Specks in a 12 x 12 grid
               to test how particles flow through the room. We tested with a vacuum cleaner, an air purifier, and candles.
-              This video presents the test results and gives instructions on how to use the explorable.
+              This video presents the test results and gives instructions on how to use the explorable.  Use the link below to explore it yourself.
             </p>
           <ul>
             <li><a href="speck-air-quality-test-explorable.html" target="_blank">Open the visualization to explore for yourself</a></li>
