Fixed font loading problems on IE. Tweaked the UI for index.html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
               <div>
                 <img class="thumbnail-image" src="img/speck_in_home@2x.png">
                 <div class="thumbnail-title">Speck In-Home Test</div>
-                <div class="thumbnail-description">Visualization of 64 Specks located in homes around the Pittsburgh area.
+                <div class="thumbnail-description">Visualization of air quality data collected by 64 Specks located in homes for five days around the Pittsburgh area.
                 </div>
               </div>
             </a>
