Included an info paragraph about Speck

--- a/explorables/speck-in-home.html
+++ b/explorables/speck-in-home.html
@@ -26,15 +26,22 @@
           <a href="speck-in-home-explorable.html" target="_blank"><img src="../img/speck_in_home/speck_in_home.png" width="520"/></a>
         </div>
         <div id="embed-description">
-            <h3>Speck In-Home Test</h3>
-            <p class="content-text">
-              This is a visualization of 64 Specks located in homes around the Pittsburgh area.
-            </p>
-            <p class="content-text">
-              Use the link below to explore it yourself.  Suggested exploration: set the "Show" filter to only show
-              Specks located in the kitchen, and then slowly move the red, triangular cursor back and forth in the timeline to see changes
-              in particles detected during typical mealtimes.
-            </p>
+          <h3>Speck In-Home Test</h3>
+          <p class="content-text">
+            Speck is a low-cost particulate monitor currently under development by the CMU CREATE Lab as a tool for
+            citizen science and personal exposure tracking. Through community-generated advocacy maps and data
+            visualization, this device will enable communities and individuals to better understand and quantify the
+            quality of the air they breathe.
+          </p>
+          <p class="content-text">
+            This is a visualization of 64 Specks located in homes around the Pittsburgh area.  Test participants placed
+            the Speck in a room of their choice and let it record samples for up to five days at 1-second intervals.
+          </p>
+          <p class="content-text">
+            Use the link below to explore it yourself. Suggested exploration: set the "Show" filter to only show
+            Specks located in the kitchen, and then slowly move the red, triangular cursor back and forth in the timeline to see changes
+            in particles detected during typical mealtimes.
+          </p>
           <ul>
             <li><a href="speck-in-home-explorable.html" target="_blank">Open the visualization to explore for yourself</a></li>
           </ul>
