--- a/explorables/speck-in-home.html
+++ b/explorables/speck-in-home.html
@@ -35,7 +35,7 @@
           </p>
           <p class="content-text">
             This is a visualization of 64 Specks located in homes around the Pittsburgh area.  Test participants placed
-            the Speck in a room of their choice and let it record samples for up to five days at 1-second intervals.
+            the Speck in a room of their choice and let it record samples for up to five days at 1-minute intervals.
           </p>
           <p class="content-text">
             Use the link below to explore it yourself. Suggested exploration: set the "Show" filter to only show
