Clicking on AirNow project does not open a new tab now.

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               </a>
             </td>
             <td class="thumbnail">
-              <a href="explorables/airnow.html" target="_blank">
+              <a href="explorables/airnow.html">
                 <div>
                   <img class="thumbnail-image" src="img/airnow@2x.png">
                   <div class="thumbnail-title">AirNow</div>
