Added Google Analytics tracking.

--- a/explorables/speck-air-quality-test-explorable.html
+++ b/explorables/speck-air-quality-test-explorable.html
@@ -3,6 +3,7 @@
   <head>
     <title>Speck Air Quality Test: Explorable</title>
     <link href="../css/main.css" media="screen" rel="stylesheet" type="text/css"/>
+    <script src="../js/googleAnalytics.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="container" style="width:1360px">
