--- a/explorables/timelapse-story-telling.html
+++ b/explorables/timelapse-story-telling.html
@@ -6,6 +6,7 @@
     <link href="../css/main.css" media="screen" rel="stylesheet" type="text/css"/>
     <script src="../js/jquery/jquery.min.js" type="text/javascript"></script>
     <script src="../js/postmessage.js" type="text/javascript"></script>
+    <script src="../js/googleAnalytics.js" type="text/javascript"></script>
     <script>
       var lastScrollTop = 0;
       var enableIframeRequest = true;
