--- a/explorables/airnow.html
+++ b/explorables/airnow.html
@@ -3,6 +3,7 @@
   <head>
     <title>AirNow</title>
     <link href="../css/main.css" media="screen" rel="stylesheet" type="text/css"/>
+    <script src="../js/googleAnalytics.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="container">
