Edited intro text

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
           </div>
         </div>
         <p id="site-description">
-          The Community Robotics, Education and Technology Empowerment Lab (<a href="http://www.cmucreatelab.org/">CREATE Lab</a>) explores socially meaningful innovation and deployment of robotic technologies. We aim to empower a technologically fluent generation of people and empower everyday citizens and scientists.
+          <a href="http://www.cmucreatelab.org/">CREATE Lab</a> Explorables provide interactive, visual representations of large data sets that allow users to delve into the information and more fully grasp its meaning.<br>
+Data in its raw form is often meaningless to the majority of people. This limits access to information that has the potential to empower communities and transform lives. We seek to make big data more accessible to the everyday citizen, as well as provide scientists with powerful tools for visualizing and communicating their research findings.
         </p>
       </div>
       <div id="body-index">
