Made minor changes to intro text and edited hrefs to open in new tabs

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div id="header">
         <div id="header-titles">
           <div class="cmu-font">
-            <a href="http://www.cmu.edu/">
+            <a href="http://www.cmu.edu/" target="_blank">
               <div id="cmu-logo-detail-page"></div>
             </a>
           </div>
@@ -22,8 +22,8 @@
           </div>
         </div>
         <p id="site-description">
-          <a href="http://www.cmucreatelab.org/">CREATE Lab</a> Explorables provide interactive, visual representations of large data sets that allow users to delve into the information and more fully grasp its meaning.<br>
-Data in its raw form is often meaningless to the majority of people. This limits access to information that has the potential to empower communities and transform lives. We seek to make big data more accessible to the everyday citizen, as well as provide scientists with powerful tools for visualizing and communicating their research findings.
+          <a href="http://www.cmucreatelab.org/" target="_blank">CREATE Lab</a> Explorables provide interactive, visual representations of large data sets that allow users to delve into the information and more fully grasp its meaning.<br>
+Data in its raw form is often meaningless to the majority of people. This limits access to information that has the potential to empower communities and transform lives. We aim to make big data more accessible to the everyday citizen, as well as provide scientists with powerful tools for visualizing and communicating their research findings.
         </p>
       </div>
       <div id="body-index">
