Tweaked the header bar UI.

--- a/explorables/timelapse-story-telling.html
+++ b/explorables/timelapse-story-telling.html
@@ -90,19 +90,10 @@
     <div id="container">
       <div id="header" style="position:fixed; top:0px; z-index:2; height: 65px;">
         <div id="header-titles">
-          <div class="cmu-font">
-            <a href="http://www.cmu.edu/">
-            <div id="cmu-logo-detail-page"></div>
-            </a>
-          </div>
           <div class="create-lab-font">
             <a href="../">
-            <div class="title-text">
-              CREATE Lab
-            </div>
-            <div class="subtitle-text">
-              Explorables
-            </div>
+              <div class="title-text">Explorables</div>
+              <div class="subtitle-text">CREATE Lab</div>
             </a>
           </div>
         </div>
