--- a/explorables/speck-air-quality-test-explorable.html
+++ b/explorables/speck-air-quality-test-explorable.html
@@ -9,15 +9,10 @@
     <div id="container" style="width:1360px">
       <div id="header" style="width:1360px">
         <div id="header-titles">
-          <div class="cmu-font">
-            <a href="http://www.cmu.edu/">
-              <div id="cmu-logo-detail-page"></div>
-            </a>
-          </div>
           <div class="create-lab-font">
             <a href="../">
-              <div class="title-text">CREATE Lab</div>
-              <div class="subtitle-text">Explorables</div>
+              <div class="title-text">Explorables</div>
+              <div class="subtitle-text">CREATE Lab</div>
             </a>
           </div>
         </div>
